--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ python-multipart==0.0.6
 openai==1.3.5
 anthropic==0.7.0
 google-generativeai==0.3.0
-rasa==3.6.0
+# rasa==3.6.0  # Removed - not compatible with Python 3.11
 spacy==3.7.2
 transformers==4.35.2
 sentence-transformers==2.2.2
