--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
   - type: web
     name: akrin-chatbot-api
     runtime: python
-    buildCommand: pip install -r requirements.txt && python -m spacy download en_core_web_md
-    startCommand: uvicorn src.api.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: python startup.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
