--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,59 @@
-# Minimal requirements for AKRIN AI Chatbot
-# Python 3.11 compatible, Render free tier optimized
-
-# Core Web Framework
+# Core Dependencies
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
 
-# AI Integration (OpenAI)
+# NLP and ML
 openai==1.3.5
+anthropic==0.7.0
+google-generativeai==0.3.0
+# rasa==3.6.0  # Not compatible with Python 3.11
+# spacy==3.7.2  # Heavy dependency, use OpenAI instead
+# transformers==4.35.2  # Heavy dependency
+# sentence-transformers==2.2.2  # Heavy dependency
 
-# Database
+# Vector Database
+# pinecone-client==2.2.4  # Temporarily disabled
+# chromadb==0.4.18  # Heavy dependency
+
+# Databases
 asyncpg==0.29.0
 aiosqlite==0.19.0
+# motor==3.3.2  # MongoDB not needed for MVP
+# redis==5.0.1  # Not needed for MVP
+sqlalchemy==2.0.23
+
+# Message Queue
+# aiokafka==0.10.0  # Not needed for MVP
+
+# Monitoring and Logging
+prometheus-client==0.19.0
+# elasticsearch==8.11.0  # Not needed for MVP
+python-json-logger==2.0.7
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+# python-oauth2==1.1.0  # Not needed for MVP
 
-# HTTP Client
+# API Integration
 httpx==0.25.2
+aiohttp==3.9.1
 
-# Configuration
+# Utilities
 python-dotenv==1.0.0
+pyyaml==6.0.1
+# numpy==1.26.2  # Not needed for MVP
+# pandas==2.1.3  # Not needed for MVP
 
-# Logging
-python-json-logger==2.0.7
+# Testing (not needed for deployment)
+# pytest==7.4.3
+# pytest-asyncio==0.21.1
+# pytest-cov==4.1.0
 
-# CORS and static files are handled by FastAPI
+# Development (not needed for deployment)
+# black==23.11.0
+# flake8==6.1.0
+# mypy==1.7.1
+# pre-commit==3.5.0
