--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ python-json-logger==2.0.7
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+PyJWT==2.8.0  # Required for JWT handling
 # python-oauth2==1.1.0  # Not needed for MVP
 
 # API Integration
