--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
+pydantic-settings==2.1.0  # Required for BaseSettings in Pydantic v2
 python-multipart==0.0.6
 
 # NLP and ML
