Fix WebSocket support - add uvicorn[standard] and websockets package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core Dependencies
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
+websockets==12.0
 pydantic==2.5.0
 pydantic-settings==2.1.0  # Required for BaseSettings in Pydantic v2
 python-multipart==0.0.6
